--- a/contactme.html
+++ b/contactme.html
@@ -13,7 +13,7 @@
 
 
     <h3><em>Send me a Message</em></h3>
-    <form class="" action="mailto:nagbiology@gmail.com" method="post" enctype="plain/text">
+    <form class="" action="mailto:nagbiology@gmail.com" method="post" enctype="text/plain">
     <label> Name </label>
     <input type="text" name="Name" value="">
     <br>
